--- a/consumi/package.json
+++ b/consumi/package.json
@@ -19,6 +19,7 @@
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
+    "@capacitor/assets": "^3.0.5",
     "@tsconfig/node22": "^22.0.2",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/tsconfig": "^0.7.0",
